fixed bug where buttons were being covered by the footer.

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -20,8 +20,6 @@
 	padding-top: 1rem;
 }
 #footer {
-	position: absolute;
-	bottom: 0;
 	width: 100vw;
 	background: white;
 }
